--- a/FrontEnd/sistema-cafeteria-DesignPatterns/src/components/CartModel/CartModel.module.css
+++ b/FrontEnd/sistema-cafeteria-DesignPatterns/src/components/CartModel/CartModel.module.css
@@ -44,8 +44,8 @@
 
 .actionButtons {
   display: flex;
-  justify-content: space-between;
   margin-top: 20px;
+  gap: 1rem;
 }
 
 .btn_Remover {
@@ -65,6 +65,7 @@
   cursor: pointer;
   border-radius: 4px;
   transition: all 0.1s ease-in-out;
+  font-weight: 700;
 }
 .btn_IrParCarrinho:not(:disabled):hover {
   background-color: #59a86d;
@@ -78,6 +79,7 @@
   cursor: pointer;
   border-radius: 4px;
   transition: all 0.1s ease-in-out;
+  font-weight: 700;
 }
 
 .btn_Descartar:hover {
@@ -88,4 +90,11 @@
 button:disabled {
   background-color: #ccc;
   cursor: not-allowed;
+}
+.orderTotal {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
